--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,24 @@ Package: clugenr
 Title: Multidimensional Cluster Generation in R
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "Nuno",
-           family = "Fachada",
-           role = c("aut", "cre"),
-           email = "faken@fakenmc.com",
-           comment = c(ORCID = "0000-0002-8487-5837"))
+  person(given = "Nuno",
+         family = "Fachada",
+         role = c("aut", "cre"),
+         email = "faken@fakenmc.com",
+         comment = c(ORCID = "0000-0002-8487-5837"))
 Description: an algorithm for generating multidimensional clusters. Each
   cluster is supported by a line segment, the position, orientation and length
   of which guide where the respective points are placed.
+Depends:
+  R (>= 3.0.0)
+Imports:
+  mathjaxr
+Suggests:
+  devtools,
+  roxygen2,
+  testthat (>= 0.8)
+RdMacros:
+  mathjaxr
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
