--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,26 +2,28 @@ Package: clugenr
 Title: Multidimensional Cluster Generation in R
 Version: 0.0.0.9000
 Authors@R: 
-  person(given = "Nuno",
-         family = "Fachada",
-         role = c("aut", "cre"),
-         email = "faken@fakenmc.com",
-         comment = c(ORCID = "0000-0002-8487-5837"))
-Description: an algorithm for generating multidimensional clusters. Each
-  cluster is supported by a line segment, the position, orientation and length
-  of which guide where the respective points are placed.
+    person(given = "Nuno",
+           family = "Fachada",
+           role = c("aut", "cre"),
+           email = "faken@fakenmc.com",
+           comment = c(ORCID = "0000-0002-8487-5837"))
+Description: An algorithm for generating multidimensional clusters. Each
+    cluster is supported by a line segment, the position, orientation and length
+    of which guide where the respective points are placed.
 Depends:
-  R (>= 3.0.0)
+    R (>= 3.6.0)
 Imports:
-  mathjaxr
+    mathjaxr
 Suggests:
-  devtools,
-  roxygen2,
-  testthat (>= 0.8)
+    devtools,
+    lintr,
+    roxygen2,
+    testthat (>= 3.0.0)
 RdMacros:
-  mathjaxr
+    mathjaxr
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Config/testthat/edition: 3
