Add Theory vignette + setup logo

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,9 @@ Imports:
     mathjaxr
 Suggests:
     devtools,
+    knitr,
     lintr,
+    rmarkdown,
     roxygen2,
     testthat (>= 3.0.0)
 RdMacros:
@@ -27,3 +29,4 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Config/testthat/edition: 3
+VignetteBuilder: knitr
