--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,11 @@ Imports:
     mathjaxr
 Suggests:
     devtools,
+    ggplot2,
     knitr,
     lintr,
+    patchwork,
+    rgl,
     rmarkdown,
     roxygen2,
     testthat (>= 3.0.0)
