Suppress R CMD check note due to mathjaxr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,3 +15,4 @@ export(points_on_line)
 export(rand_ortho_vector)
 export(rand_unit_vector)
 export(rand_vector_at_angle)
+importFrom(mathjaxr,preview_rd)
