--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.1.0
 Authors@R: 
     person(given = "Nuno",
            family = "Fachada",
-           role = c("aut", "cre"),
+           role = c("aut", "cre", "cph"),
            email = "faken@fakenmc.com",
            comment = c(ORCID = "0000-0002-8487-5837"))
 Description: An R implementation of the clugen algorithm for generating
