--- a/.github/workflows/cov.yml
+++ b/.github/workflows/cov.yml
@@ -3,10 +3,10 @@ name: test-coverage
 on:
   push:
     branches: [main]
-    paths: [ 'R/**', 'tests/**' ]
+    paths: [ 'R/**', 'tests/**', '.github/workflows/cov.yml' ]
   pull_request:
     branches: [main]
-    paths: [ 'R/**', 'tests/**' ]
+    paths: [ 'R/**', 'tests/**', '.github/workflows/cov.yml' ]
 
 jobs:
   test-coverage:
