Basic clumerge() docs + export it as library function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(angle_btw)
 export(angle_deltas)
 export(clucenters)
 export(clugen)
+export(clumerge)
 export(clupoints_n)
 export(clupoints_n_1)
 export(clupoints_n_1_template)
