--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,10 +8,10 @@ Authors@R:
            email = "faken@fakenmc.com",
            comment = c(ORCID = "0000-0002-8487-5837"))
 Description: An implementation of the clugen algorithm for generating
-    multidimensional clusters. Each cluster is supported by a line segment, the
-    position, orientation and length of which guide where the respective points
-    are placed. This package is described in Fachada & de Andrade (2023)
-    <doi:10.48550/arXiv.2301.10327>.
+    multidimensional clusters with arbitrary distributions. Each cluster is
+    supported by a line segment, the position, orientation and length of which
+    guide where the respective points are placed. This package is described in
+    Fachada & de Andrade (2023) <doi:10.48550/arXiv.2301.10327>.
 Depends:
     R (>= 3.6.0)
 Imports:
