--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Description: An implementation of the clugen algorithm for generating
     multidimensional clusters with arbitrary distributions. Each cluster is
     supported by a line segment, the position, orientation and length of which
     guide where the respective points are placed. This package is described in
-    Fachada & de Andrade (2023) <doi:10.48550/arXiv.2301.10327>.
+    Fachada & de Andrade (2023) <doi:10.1016/j.knosys.2023.110836>.
 Depends:
     R (>= 3.6.0)
 Imports:
