--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,7 @@ Suggests:
 RdMacros:
     mathjaxr
 License: MIT + file LICENSE
-URL: https://github.com/clugen/clugenr
+URL: https://clugen.github.io/clugenr/
 BugReports: https://github.com/clugen/clugenr/issues
 Encoding: UTF-8
 LazyData: true
