--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches: [main]
     paths: [ 'R/**', 'tests/**', '.github/workflows/check.yml' ]
+  workflow_dispatch:
 
 jobs:
   R-CMD-check:
