--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -41,7 +41,9 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: rcmdcheck
+          extra-packages: |
+            rcmdcheck
+            cyclocomp
 
       - uses: r-lib/actions/check-r-package@v2
 
