--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -41,9 +41,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: |
-            rcmdcheck
-            cyclocomp
+          extra-packages: rcmdcheck
 
       - uses: r-lib/actions/check-r-package@v2
 
