--- a/.github/workflows/cov.yml
+++ b/.github/workflows/cov.yml
@@ -27,3 +27,5 @@ jobs:
       - name: Test coverage
         run: covr::codecov()
         shell: Rscript {0}
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
